// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuList should handle button start true 1`] = `
<MenuList
  button={
    Object {
      "start": true,
    }
  }
  className="testClassName"
  label="label"
>
  <ul
    className="list testClassName"
  >
    <TextButton
      className="button"
      start={true}
    >
      <Link
        className="link undefined button"
        start={true}
      >
        <A
          className="link link undefined button"
          start={true}
        >
          <a
            className="link link undefined button"
          />
        </A>
      </Link>
    </TextButton>
    <B
      className="label"
    >
      <b
        className="b label"
      >
        label
      </b>
    </B>
    <hr
      className="border"
    />
  </ul>
</MenuList>
`;

exports[`MenuList should handle no button 1`] = `
<MenuList
  button={null}
  className="testClassName"
  label="label"
>
  <ul
    className="list testClassName"
  >
    <B
      className="label"
    >
      <b
        className="b label"
      >
        label
      </b>
    </B>
    <hr
      className="border"
    />
  </ul>
</MenuList>
`;

exports[`MenuList should handle no label 1`] = `
<MenuList
  button={
    Object {
      "start": false,
      "text": "Click Me",
    }
  }
  className="testClassName"
  label={null}
>
  <ul
    className="list testClassName"
  >
    <TextButton
      className="button"
      start={false}
      text="Click Me"
    >
      <Link
        className="link undefined button"
        start={false}
        text="Click Me"
      >
        <A
          className="link link undefined button"
          start={false}
          text="Click Me"
        >
          <a
            className="link link undefined button"
          >
            Click Me
          </a>
        </A>
      </Link>
    </TextButton>
  </ul>
</MenuList>
`;

exports[`MenuList should render correctly 1`] = `
<MenuList
  button={
    Object {
      "start": false,
      "text": "Click Me",
    }
  }
  className="testClassName"
  label="label"
>
  <ul
    className="list testClassName"
  >
    <B
      className="label"
    >
      <b
        className="b label"
      >
        label
      </b>
    </B>
    <hr
      className="border"
    />
    <TextButton
      className="button"
      start={false}
      text="Click Me"
    >
      <Link
        className="link undefined button"
        start={false}
        text="Click Me"
      >
        <A
          className="link link undefined button"
          start={false}
          text="Click Me"
        >
          <a
            className="link link undefined button"
          >
            Click Me
          </a>
        </A>
      </Link>
    </TextButton>
  </ul>
</MenuList>
`;
